src/objects/Cricket_Team_Player__c.object
<CustomObject>
    <description>Maps team with player symbolizing player in team.</description>
    <fields>
        <fullName>Cricket_Player__c</fullName>
        <description>References to specific cricket player.</description>
        <inlineHelpText>Store Player value here.</inlineHelpText>
        <label>Cricket Player</label>
        <referenceTo>Cricket_Player__c</referenceTo>
        <relationshipLabel>Cricket Players</relationshipLabel>
        <relationshipName>Cricket_Players</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cricket_Team__c</fullName>
        <description>References to specific team.</description>
        <inlineHelpText>Store team value.</inlineHelpText>
        <label>Cricket Team</label>
        <referenceTo>Cricket_Team__c</referenceTo>
        <relationshipLabel>Cricket Team</relationshipLabel>
        <relationshipName>Cricket_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>In_Playing_XI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies whether Player is in playing eleven for specific team.</description>
        <inlineHelpText>Store your Player&apos;s Status &quot;In Playing Eleven&quot; for specific team.</inlineHelpText>
        <label>In Playing XI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Points_Recalculated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Points Recalculated</description>
        <inlineHelpText>Total Points Recalculated</inlineHelpText>
        <label>Total Points Recalculated</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <description>Total Points</description>
        <formula>Cricket_Player__r.Total_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Points</inlineHelpText>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cricket Team Player</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTP-{00000}</displayFormat>
        <label>Team Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cricket Team Players</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>